--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # Sample configuration for Galactica Auto-Restaking Bot
 # Copy this file to .env.local and fill in your values.
 
-# Wallet private key (hex string starting with 0x)
+# Wallet private key 
 PRIVATE_KEY=0xYOUR_PRIVATE_KEY
 
 # Wallet address that holds the stake
 WALLET_ADDRESS=0xYOUR_ADDRESS
 
-# RPC endpoint for Galactica Mainnet
+# RPC endpoint for Galactica Mainnet (optional override of config.yaml)
 RPC_URL=https://galactica-mainnet.g.alchemy.com/public
 
-# Staking contract address (Galactica Mainnet)
+# Staking contract address (Galactica Mainnet, optional override)
 STAKING_CONTRACT=0x90B07E15Cfb173726de904ca548dd96f73c12428
