--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,12 @@ pyyaml>=6.0
 
 # Utilities
 colorama>=0.4.6
+
+# GUI dependencies
+pystray>=0.19.0
+Pillow>=10.0.0
+APScheduler>=3.10.0
+pywin32>=306  # Windows DPAPI for encrypted key storage
+
+# Build tools (optional, for creating .exe)
+# pyinstaller>=6.0.0
