feat: veGNET Lock Extender GUI + CLI, rewrite README for v3.0.0
- Add extend.py: CLI tool for auto-extending veGNET lock to max (730 days)
- Add extend_gui.py: Tkinter GUI with Dashboard/Settings/Log tabs, system tray
- Rewrite README: Lock Extender as main project, restaker moved to Legacy section
- Update CHANGELOG with 3.0.0 entry
- Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,16 @@ pyyaml>=6.0
 
 # Utilities
 colorama>=0.4.6
+requests>=2.31.0
 
-# GUI dependencies
+# GUI v1 (legacy tkinter tray app)
 pystray>=0.19.0
 Pillow>=10.0.0
 APScheduler>=3.10.0
 pywin32>=306  # Windows DPAPI for encrypted key storage
+
+# GUI v2 (NiceGUI web dashboard)
+nicegui>=2.0.0
 
 # Build tools (optional, for creating .exe)
 # pyinstaller>=6.0.0
