--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ requests>=2.31.0
 
 # GUI v1 (legacy tkinter tray app)
 pystray>=0.19.0
+winotify>=1.1.0
 Pillow>=10.0.0
 APScheduler>=3.10.0
 pywin32>=306  # Windows DPAPI for encrypted key storage
